Creando primera seccion

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <main>
-        
+        <section class="hero">
+            <div class="hero-info">
+                <h1>Check the<br>best food</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis repudiandae laborum vitae, consequatur corrupti ab veniam ducimus dicta, et amet est, eaque voluptatibus itaque perspiciatis sit suscipit reiciendis ut autem!</p>
+                <button>Book a table --></button>
+            </div>
+            <img class="hero-image" src="./images/hero.png" alt="">
+        </section>
     </main>
 </body>
 </html>
