Sección dishes completada y se añadieron estilos a la seccion Hero

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -14,7 +14,17 @@
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis repudiandae laborum vitae, consequatur corrupti ab veniam ducimus dicta, et amet est, eaque voluptatibus itaque perspiciatis sit suscipit reiciendis ut autem!</p>
                 <button>Book a table --></button>
             </div>
-            <img class="hero-image" src="./images/hero.png" alt="">
+            <img class="hero-image" src="./images/hero.png" alt="Plato de pasta con salsa y verduras">
+        </section>
+        <section class="services">
+            <h2 class="services-title">Our Services</h2>
+            <div class="services-dishes">
+                <img class="services-dishes-video" src="./images/video.png" alt="Presentacion en video de los platos" title="Reproducir video">
+                <img class="services-dishes1" src="./images/dish1.png" alt="Bowl de arroz y verduras">
+                <img class="services-dishes2" src="./images/dish2.png" alt="Huevos duros con verduras">
+                <img class="services-dishes3" src="./images/dish3.png" alt="Esparragos escalfados">
+                <img class="services-dishes4" src="./images/dish4.png" alt="Milanesa con albahaca">
+            </div>
         </section>
     </main>
 </body>
