Proyecto hecho a responsive

--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -26,6 +26,16 @@
                 <img class="services-dishes4" src="./images/dish4.png" alt="Milanesa con albahaca">
             </div>
         </section>
+        <secton class="menu">
+            <h2 class="menu-title">Home Menu</h2>
+            <div class="menu-grid">
+                <img class="menu-grid-item" src="./images/plate1.png" alt="Platillo con fideos y verduras">
+                <img class="menu-grid-item" src="./images/plate2.png" alt="Platillo con fideos y verduras">
+                <img class="menu-grid-item" src="./images/plate3.png" alt="Platillo con fideos y verduras">
+                <img class="menu-grid-item" src="./images/plate4.png" alt="Platillo con fideos y verduras">
+                <img class="menu-grid-item" src="./images/plate5.png" alt="Platillo con fideos y verduras">
+            </div>
+        </secton>
     </main>
 </body>
 </html>
